# trenchcoat

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  http-to-serial.py
console-app/: Cargo.toml  bench
console-app/src/: main.rs
console-compiler/: Cargo.toml
console-compiler/src/: main.rs
esp32-c3-app/: .gitignore  Cargo.toml  cfg.toml  config.toml.example  run  sdkconfig.defaults
esp32-c3-app/.cargo/: config.toml
esp32-c3-app/src/: app_config.rs  main.rs  runtime.rs  ws_peri.rs
esp32-c3-app/src/bsc/: led.rs  temp_sensor.rs  wifi.rs
minimal-alloc-gated/: Cargo.toml
minimal-alloc-gated/src/: main.rs
res/: Coronal Mass Ejection.epe  Coronal Mass Ejection.js  Perlin_Simplex Noise 2D.epe  Perlin_Simplex Noise 2D.js  Pew-Pew-Pew!.epe  Pew-Pew-Pew!.js  Rainbow OkHsl.js  Rainbow v2.epe  Rainbow v2.js  convert.sh  convert_all.sh  pure_js.js  rainbow melt low.tcb  rainbow melt.epe  rainbow melt.js  rainbow melt.tcb  rgb.js  sinpulse 3D.epe  sinpulse 3D.js  test_ffi.js  ui.js  xorcery 2D_3D.epe  xorcery 2D_3D.js
src/: lib.rs  macros.rs  main.rs  web_loop.rs
src/forth/: bytecode.rs  compiler.rs  env.rs  inter.rs  mod.rs  ops.rs  pixelblaze.rs  runtime.rs  util.rs  uwu.rs  v2.rs  vis0r.rs  vm.rs
src/pixelblaze/: executor.rs  ffi.rs  funcs.rs  mod.rs  runtime.rs  std.rs  traits.rs  util.rs
src/py/: ffi.rs
src/vanillajs/: ffi.rs  mod.rs  runtime.rs
stm32f4-app/: Cargo.toml  show_symbols.sh
stm32f4-app/.cargo/: config.toml
stm32f4-app/src/: lib.rs  runtime.rs
stm32f4-app/testsuite/: Cargo.toml
stm32f4-app/testsuite/src/: lib.rs
stm32f4-app/testsuite/tests/: test.rs
vm2/: Cargo.toml
vm2/src/: lib.rs
web-app/: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  config.toml.example
web-app/assets/: style.css
web-app/public/: style.css
web-app/src/: local_subscription.rs  main.rs  render.rs  runtime.rs
