[package]
name = "pixelblaze-rs"
version = "0.1.0"
edition = "2021"

# dep: feature syntax is 1.60+
rust-version = "1.60"

[workspace]
exclude = ["res"]

[features]
use-std = []
console = ["swc_common?/termcolor", "swc_common?/tty-emitter"]
desktop = ["use-std", "parse", "console", "dep:pretty_env_logger"]
parse = ["dep:swc_common", "dep:swc_ecma_ast", "dep:swc_ecma_parser", "dep:swc_ecma_utils", "dep:swc_ecma_visit"]
default = ["use-std"]

[dependencies]
heapless = "0.7"
postcard = "1.0"
serde = { version = "1.0.145", features = ["derive"] }

swc_common = { version = "0.29", features = [], optional = true }
swc_ecma_ast = { version = "0.94", optional = true}
swc_ecma_parser = { version = "0.122", features = ["debug", "swc_ecma_visit"], optional = true }
swc_ecma_utils = { version = "0.105", optional = true}
swc_ecma_visit = { version = "0.80", features = ["debug"], optional = true }

phf = { version = "0.11", features = ["macros"] }
fixed = { version = "1", features = ["serde","num-traits"] }
cordic = "0.1"
log = "0.4"
pretty_env_logger = { version = "0.4", optional = true}
thiserror = "1"
divrem = "1"

[dev-dependencies]
anyhow = "1"
