[package]
name = "trenchcoat"
version = "0.4.1"
edition = "2021"

license-file = "LICENSE.txt"
description = "JavaScript-ish virtual machine for embedded, LEDs, hot code reload, etc."
homepage = "https://github.com/spookyvision/trenchcoat"
repository = "https://github.com/spookyvision/trenchcoat"
readme = "README.md"
keywords = ["vm", "embedded", "pixelblaze", "javascript", "smartleds"]
categories = ["embedded", "emulators", "no-std", "wasm"]
# dep: feature syntax is 1.60+
rust-version = "1.60"

[workspace]
members = ["console-app", "console-compiler"]
exclude = ["web-app", "stm32f4-app", "minimal-alloc-gated"]

[features]
full = ["use-std", "compiler", "tty", "log"]
use-std = ["thiserror", "alloc"]
alloc = ["postcard/alloc"]
log = ["dep:log"]
defmt = ["dep:defmt"]
tty = ["swc_common?/termcolor", "swc_common?/tty-emitter", "dep:clap"]
compiler = ["use-std", "dep:anyhow", "dep:phf", "dep:swc_common", "dep:swc_ecma_ast", "dep:swc_ecma_parser", "dep:swc_ecma_utils", "dep:swc_ecma_visit"]
default = ["full"]

[dependencies]
heapless = "0.7"
postcard = "1.0"
serde = { version = "1.0.145", features = ["derive"], default-features = false }

swc_common = { version = "0.29", features = [], optional = true }
swc_ecma_ast = { version = "0.94", optional = true}
swc_ecma_parser = { version = "0.122", features = ["debug", "swc_ecma_visit"], optional = true }
swc_ecma_utils = { version = "0.105", optional = true}
swc_ecma_visit = { version = "0.80", features = ["debug"], optional = true }

phf = { version = "0.11", features = ["macros"], optional = true }
fixed = { version = "1", features = ["serde", "num-traits"] }
cordic = "0.1"
log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }
thiserror = { version = "1", optional = true }

clap = { version = "4.0.18", features = ["derive"], optional = true }
anyhow = { version = "1", optional = true }

[dev-dependencies]
anyhow = "1"
