[package]
name = "trenchcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trenchcoat = { path = "..", features = ["full"]}
pretty_env_logger = { version = "0.4" }
clap = { version = "4.0.18", features = ["derive"] }
anyhow = "1"