[package]
name = "trenchcoat-esp32"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
lto = "fat"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
ws2812 = ["dep:ws2812-esp32-rmt-driver"]
apa102 = ["dep:espidf-apa102"]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp32c3 = "0.14.0"
# stuff's broken atm
# esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git"}
# esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git"}
# embedded-svc = { git = "https://github.com/esp-rs/embedded-svc.git", features = ["experimental"]}

esp-idf-sys = { version = "=0.32.1", features = ["binstart", "native"] }
esp-idf-svc = { version = "=0.45.0", features = ["experimental", "alloc"] }
embedded-svc = "=0.24.0"
esp-idf-hal = "=0.40.1"


anyhow = "1.0"
rgb = "0.8"
log = "0.4"

trenchcoat = { path = "..", features = [
    "log",
    "use-std",
], default_features = false }

espidf-apa102 = { git = "https://github.com/spookyvision/espidf-apa102.git", optional = true }
serde = { version = "1.0.147", features = ["derive"], default_features = false }
indexmap = { version = "1.9.1", features = ["std"] }
postcard = { version = "1.0.2", features = ["use-std"] }
config = "0.13.2"
ws2812-esp32-rmt-driver = { version = "0.5.0", optional = true }
smart-leds = { version = "0.3.0" }
[build-dependencies]
embuild = "=0.31.1"
anyhow = "1"
