[package]
# TODO fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["Anatol Ulrich <anatol@versteht.es>"]
name = "stm32f4-app"
edition = "2018"
version = "0.1.0"

[workspace]
members = ["testsuite"]

[dependencies]
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-rtic = "1.1"
cortex-m = "0.7"
dwt-systick-monotonic = "1.0"
fugit = "0.3"
trenchcoat = { path = "..", features = ["defmt"], default-features = false}
f4-peri = { git = "https://github.com/spookyvision/f4-peri.git" }
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"
postcard = "1.0.2"
cordic = "0.1.5"
micromath = { version = "2.0.0", features = ["num-traits"] }

[dependencies.stm32f4xx-hal]
git = "https://github.com/stm32-rs/stm32f4xx-hal.git"
features = ["stm32f411", "rt", "usb_fs"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
