[package]
authors = ["Anatol Ulrich"]
name = "stm32f4-app"
edition = "2018"
version = "0.1.0"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-rtic = "1.1"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
dwt-systick-monotonic = "1.0"
fugit = "0.3"
trenchcoat = { path = "..", features = [
    "defmt",
    "alloc",
], default-features = false }
f4-peri = { git = "https://github.com/spookyvision/f4-peri.git" }
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"
postcard = { version = "1.0.2", features = ["use-defmt"] }
cordic = "0.1.5"
micromath = { version = "2.0.0", features = ["num-traits"] }
usb-device = "0.2"
usbd-serial = "0.1"
bbqueue = { version = "0.5.1", features = ["defmt_0_3"] }
heapless = { version = "0.7.16", features = ["defmt", "defmt-impl"] }
alloc-cortex-m = "0.4.3"


[dependencies.stm32f4xx-hal]
git = "https://github.com/stm32-rs/stm32f4xx-hal.git"
features = ["stm32f411", "rt", "usb_fs"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s"         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s"         # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s"          # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s"          # <-
overflow-checks = false  # <-
