[package]
name = "web-app"
version = "0.1.0"
authors = ["Anatol Ulrich"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trenchcoat = { path = "..", features = [
    "compiler",
    "log",
    "use-std",
], default_features = false }
chrono = { version = "0.4", features = ["wasmbind"] }
fermi = "0.3"
gloo = { version = "0.8", features = ["futures"] }

dioxus = { version = "0.3.1" }

log = "0.4.6"

# WebAssembly Debug
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
postcard = { version = "1.0.2", features = ["use-std"] }
anyhow = "1.0.66"
surf = { version = "2", default_features = false, features = ["wasm-client"] }
futures = "0.3.25"
config = { version = "0.13.2", features = ["toml"] }
serde = { version = "1.0.147", features = ["derive"], default_features = false }
dioxus-web = "0.3.0"
palette = "0.7"
im-rc = "15.1.0"
itertools = "0.10.5"

[patch.crates-io]
dioxus-interpreter-js = { git = "https://github.com/DioxusLabs/dioxus.git" }

[build-dependencies]
serde = { version = "1.0.147", features = ["derive"], default_features = false }
postcard = { version = "1.0.2", features = ["use-std"] }
config = { version = "0.13.2", features = ["toml"] }
