[package]
# TODO fix `authors` if you didn't use `cargo-generate`
authors = ["Anatol Ulrich <anatol@versteht.es>"]
name = "testsuite"
publish = false
edition = "2021"
version = "0.1.0"

[lib]
harness = false

[[test]]
name = "test"
harness = false

[dependencies]
stm32f4-app = { path = ".." }
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
defmt-test = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

